Closed Bug 1066142 Opened 10 years ago Closed 10 years ago

AntiAlias mode in Direct2D 1.1 backend is not respected

Categories

(Core :: Graphics, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: bas.schouten, Assigned: bas.schouten)

Details

Attachments

(1 file)

Currently Direct2D 1.1 rarely respects the antialias mode requested and just defaults to grayscale AA for most drawing, we should fix that.
Attachment #8487999 - Flags: review?(jmuizelaar)
Attachment #8487999 - Flags: review?(jmuizelaar) → review+
https://hg.mozilla.org/mozilla-central/rev/08734616a139
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: