Bug 1066142: Respect AntiAlias mode in Direct2D 1.1 backend. r=jrmuizel